js/js.translator/testData/incremental/invalidation/companionConstVal/lib2/simpleChild.4.kt
class SimpleChild : Class() {
    fun simpleMethod(): String {
        return "4"
    }
}
